# brain-ml-qc

./: .gitattributes  .gitignore  ASSESSEMENTS.md  DATASETS.md  FILES.md  PAPERS.md  README.md  TODO.md  TOOLS.md  best_qc_model_synthesized.pth  best_resnet18_qc_w_conf.pth  pyproject.toml  run_evaluate_abide_confidence.sh  run_evaluate_synthesized.sh  run_train_abide_confidence.sh  run_train_synthesized.sh  training_log.txt  training_log_confidence.txt  training_log_freq.txt  training_log_table_results.txt
logs/: training_log.txt  training_log_confidence.txt  training_log_freq.txt  training_log_synthetic.txt
models/: best_qc_model_synthesized.pth  best_resnet18_qc_freq.pth  best_resnet18_qc_w_conf.pth  best_resnet18_qc_wo_conf.pth
shell/: run_evaluate_abide_confidence.sh  run_evaluate_synthesized.sh  run_train_abide_confidence.sh  run_train_synthesized.sh
src/: extract_zip.py
src/brain_mri_qc/: abide.py  analyze_abide_ratings.py  annotate_abide_ratings.py  bidsify_abide.py  build_abide_i.py  create_dataset.py  download_abide.py  download_abide_ii.py  evaluate_abide_confidence.py  evaluate_synthesized.py  extract_zip.py  model.py  run_artifact_model.py  run_mri_qc.py  summarize_abide_ratings.py  synthesize_abide_ratings.py  synthesize_artifacts.py  train.py  train_abide.py  train_abide_confidence.py  train_abide_freq.py  train_multi.py  train_synthesized.py  utils.py
typst/: main.typ
