[project]
name = "brain-mri-qc"
version = "0.0.0"
dependencies = [
    "monai",
    "mriqc-learn",
    "numpy",
    "pandas",
    "requests",
    "scikit-learn",
    "torch",
    "torchio",
]

[project.scripts]
analyze-abide-ratings  = "brain_mri_qc.analyze_abide_ratings:main"
create-dataset         = "brain_mri_qc.create_dataset:main"
download-abide         = "brain_mri_qc.download_abide:main"
annotate-abide-ratings = "brain_mri_qc.annotate_abide_ratings:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/brain_mri_qc",
]
