[project]
name = "brain-mri-qc"
version = "0.0.0"
requires-python = ">= 3.12"
dependencies = [
    "matplotlib",
    "monai",
    "mriqc-learn",
    "nibabel",
    "numpy",
    "pandas",
    "requests",
    "scikit-learn",
    "torch",
    "torchio",
    "urllib3",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.scripts]
bidsify-abide           = "brain_mri_qc.bidsify_abide:main"
download-abide          = "brain_mri_qc.download_abide:main"
labelize-abide-ratings  = "brain_mri_qc.labelize_abide_ratings:main"
run-mri-qc              = "brain_mri_qc.run_mri_qc:main"
summarize-abide-ratings = "brain_mri_qc.summarize_abide_ratings:main"
synthesize-artifacts    = "brain_mri_qc.synthesize_artifacts:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/brain_mri_qc",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "EXE", "F", "I", "N", "RUF", "UP", "W"]
